# smart-decision-miniprojet

./: README.md  pyproject.toml  test_chinese_cities.py  test_solomon.txt  test_solomon_c101.txt  test_vrp.py
.VSCodeCounter/2025-10-30_16-12-17/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/smart_decision_miniproject/: __init__.py
src/smart_decision_miniproject/TSP_datamodel/: __init__.py  distance_matrix.py  distance_matrix_factory.py  geo_utils.py
src/smart_decision_miniproject/hmi/: task1_page.py  task2_page.py  task3_page.py  web_hmi.py
src/smart_decision_miniproject/solver/: TSP.py  VRP.py  __init__.py
src/smart_decision_miniproject/timer/: __init__.py  timer.py  timer_manager.py
