[project]
name = "smart-decision-miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Philippe QU", email = "philippe.qu@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "nicegui>=3.2.0",
    "folium>=0.14.0",
    "plotly>=6.3.1",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
